Refactor deprecated APIs